Added a comment for separating Error calculation in the code for each timestep

--- a/Problem1.ipynb
+++ b/Problem1.ipynb
@@ -1718,6 +1718,8 @@
     "T_2 = T_solns[-1]\n",
     "dt2 = dt\n",
     "print('Difference between Analytical & Numerical solution at final timestep ',T_final- T_2)\n",
+    "\n",
+    "# Error Calculation \n",
     "ei_2 = T_final[1:-1]- T_2[1:-1]\n",
     "e_2 = sum(ei_2) / len(ei_2) # Where len(ei_2) = ncv\n",
     "print('Absolute average error = ',abs(e_2))"
@@ -1875,6 +1877,8 @@
     "T_4 = T_solns[-1]\n",
     "dt4 = dt\n",
     "print('Difference between Analytical & Numerical solution at final timestep ',T_final- T_4)\n",
+    "\n",
+    "# Error Calculation \n",
     "ei_4 = T_final[1:-1]- T_4[1:-1]\n",
     "e_4 = sum(ei_4) / len(ei_4) # Where len(ei_4) = ncv\n",
     "print('Absolute average error = ',abs(e_4))"
@@ -2044,6 +2048,8 @@
     "T_8 = T_solns[-1]\n",
     "dt8 = dt\n",
     "print('Difference between Analytical & Numerical solution at final timestep ',T_final- T_8)\n",
+    "\n",
+    "# Error Calculation \n",
     "ei_8 = T_final[1:-1]- T_8[1:-1]\n",
     "e_8 = sum(ei_8) / len(ei_8) # Where len(ei_8) = ncv\n",
     "print('Absolute average error = ',abs(e_8))"
@@ -2237,6 +2243,8 @@
     "T_16 = T_solns[-1]\n",
     "dt16 = dt\n",
     "print('Difference between Analytical & Numerical solution at final timestep ',T_final- T_16)\n",
+    "\n",
+    "# Error Calculation \n",
     "ei_16 = T_final[1:-1]- T_16[1:-1]\n",
     "e_16 = sum(ei_16) / len(ei_16) # Where len(ei_16) = ncv\n",
     "print('Absolute average error = ',abs(e_16))"
@@ -2479,6 +2487,8 @@
     "dt32 = dt\n",
     "xP = grid.xP\n",
     "print('Difference between Analytical & Numerical solution at final timestep ',T_final_32- T_32)\n",
+    "\n",
+    "# Error Calculation \n",
     "ei_32 = T_final_32[1:-1]- T_32[1:-1]\n",
     "e_32 = sum(ei_32) / len(ei_32) # Where len(ei_32) = ncv\n",
     "print('Absolute average error = ',abs(e_32))\n"
@@ -3902,6 +3912,8 @@
     "T_2 = T_solns[-1]\n",
     "dt2 = dt\n",
     "print('Difference between Analytical & Numerical solution at final timestep ',T_final- T_2)\n",
+    "\n",
+    "# Error Calculation \n",
     "ei_2 = T_final[1:-1]- T_2[1:-1]\n",
     "e_2 = sum(ei_2) / len(ei_2) # Where len(ei_2) = ncv\n",
     "print('Absolute average error = ',abs(e_2))"
@@ -4061,6 +4073,8 @@
     "T_4 = T_solns[-1]\n",
     "dt4 = dt\n",
     "print('Difference between Analytical & Numerical solution at final timestep ',T_final- T_4)\n",
+    "\n",
+    "# Error Calculation \n",
     "ei_4 = T_final[1:-1]- T_4[1:-1]\n",
     "e_4 = sum(ei_4) / len(ei_4) # Where len(ei_4) = ncv\n",
     "print('Absolute average error = ',abs(e_4))"
@@ -4232,6 +4246,8 @@
     "T_8 = T_solns[-1]\n",
     "dt8 = dt\n",
     "print('Difference between Analytical & Numerical solution at final timestep ',T_final- T_8)\n",
+    "\n",
+    "# Error Calculation \n",
     "ei_8 = T_final[1:-1]- T_8[1:-1]\n",
     "e_8 = sum(ei_8) / len(ei_8) # Where len(ei_8) = ncv\n",
     "print('Absolute average error = ',abs(e_8))"
@@ -4427,6 +4443,8 @@
     "T_16 = T_solns[-1]\n",
     "dt16 = dt\n",
     "print('Difference between Analytical & Numerical solution at final timestep ',T_final- T_16)\n",
+    "\n",
+    "# Error Calculation \n",
     "ei_16 = T_final[1:-1]- T_16[1:-1]\n",
     "e_16 = sum(ei_16) / len(ei_16) # Where len(ei_16) = ncv\n",
     "print('Absolute average error = ',abs(e_16))"
@@ -4671,6 +4689,8 @@
     "dt32 = dt\n",
     "xP = grid.xP\n",
     "print('Difference between Analytical & Numerical solution at final timestep ',T_final_32- T_32)\n",
+    "\n",
+    "# Error Calculation \n",
     "ei_32 = T_final_32[1:-1]- T_32[1:-1]\n",
     "e_32 = sum(ei_32) / len(ei_32) # Where len(ei_32) = ncv\n",
     "print('Absolute average error = ',abs(e_32))\n"
