Finalized comments with very small edit

--- a/Problem1.ipynb
+++ b/Problem1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,38 +420,12 @@
     "        coeffs.accumulate_rP(flux)\n",
     "\n",
     "        # Return the modified coefficient array\n",
-    "        return coeffs\n",
-    "\n",
-    "class SurfaceConvectionModel:\n",
-    "    \"\"\"Class defining a surface convection model\"\"\"\n",
-    "\n",
-    "    def __init__(self, grid, T, ho, To):\n",
-    "        \"\"\"Constructor\"\"\"\n",
-    "        self._grid = grid\n",
-    "        self._T = T\n",
-    "        self._ho = ho\n",
-    "        self._To = To\n",
-    "\n",
-    "    def add(self, coeffs):\n",
-    "        \"\"\"Function to add surface convection terms to coefficient arrays\"\"\"\n",
-    "\n",
-    "        # Calculate the source term\n",
-    "        source = self._ho*self._grid.Ao*(self._T[1:-1] - self._To)\n",
-    "\n",
-    "        # Calculate the linearization coefficients\n",
-    "        coeffP = self._ho*self._grid.Ao\n",
-    "\n",
-    "        # Add to coefficient arrays\n",
-    "        coeffs.accumulate_aP(coeffP)\n",
-    "        coeffs.accumulate_rP(source)\n",
-    "\n",
-    "        return coeffs\n",
-    "\n"
+    "        return coeffs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1530,7 @@
    "metadata": {},
    "source": [
     "### Comments on the grid convergence test :\n",
-    "Starting from 5 control volumes, we went upto to taking 30 control volumes in half of the plane wall (From x=0 to x=L) for discretion of the field equation. The numerical solution for all 4 cases i.e. 5,10,20 and 30 control volumes show very close temperature profiles as shown in the graph above. But beyong 10 control volumes, the numerical solution curves overlap, so considering the graph only, we can say that 10 control volumes are sufficient for solving this problem. \n",
+    "Starting from 5 control volumes, we went upto to taking 30 control volumes in half of the plane wall (From x=0 to x=L) for discretion of the field equation. The numerical solution for all 4 cases i.e. 5,10,20 and 30 control volumes show very close temperature profiles as shown in the graph above. But beyond 10 control volumes, the numerical solution curves overlap, so considering the graph only, we can say that 10 control volumes are sufficient for solving this problem. \n",
     "\n",
     "To dig deeper into the accuracy of solutions for each case, we also calculated the difference between the numerical solution and analytical solution at each internal control volume. The one-term fourier analytical solution of the problem is given by :\n",
     "![image.png](attachment:image.png)\n",
@@ -1581,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -1734,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -2064,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -2259,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -2503,7 +2477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -2550,7 +2524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -2616,7 +2590,7 @@
     "\n",
     "In $Fig.2$ we have plotted the temperature profile at final time (3.2632 second) over half of the plane wall (from x=0 to x=L) for different number of timesteps. It is observed that, the temperature profile for 32 timesteps with $\\Delta $T = 0.087803 is the closest to the Analytical solution and the temperature profile for 2 timesteps with $\\Delta $T = 1.40485 is the farthest. This indicates that, more the number of timesteps we use i.e. smaller the timestep size, better will be the accuracy of the solution.\n",
     "\n",
-    "In $Fig.3$, we have plotted the absolute average error vs the time step size for first order transient scheme and fitted an exponential curve on the log-log plot to obtain the exponent $p$ in $e$ = $c(\\Delta T)^{p}$ as 1.29 which rounds to 1. Thus, our plot supports the conclusion that First order transient scheme is 1st order accurate ."
+    "In $Fig.3$, we have plotted the absolute average error vs the time step size for first order transient scheme and fitted an exponential curve on the log-log plot to obtain the exponent $p$ in $e$ = $c(\\Delta T)^{p}$ as 1.29 which rounds down to 1. Thus, our plot supports the conclusion that First order transient scheme is 1st order accurate ."
    ]
   },
   {
@@ -2628,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -2686,7 +2660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2729,7 +2703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 275,
    "metadata": {
     "scrolled": false
    },
@@ -2969,7 +2943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -3207,7 +3181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -3451,7 +3425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -3701,7 +3675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -3749,7 +3723,7 @@
    "metadata": {},
    "source": [
     "### Comments on the grid convergence test :\n",
-    "Starting from 5 control volumes, we went upto to taking 30 control volumes in half of the plane wall (From x=0 to x=L) for discretion of the field equation. The numerical solution for all 4 cases i.e. 5,10,20 and 30 control volumes show very close temperature profiles as shown in the graph above. But beyong 10 control volumes, the numerical solution curves overlap, so considering the graph only, we can say that 10 control volumes are sufficient for solving this problem. \n",
+    "Starting from 5 control volumes, we went upto to taking 30 control volumes in half of the plane wall (From x=0 to x=L) for discretion of the field equation. The numerical solution for all 4 cases i.e. 5,10,20 and 30 control volumes show very close temperature profiles as shown in the graph above. But beyond 10 control volumes, the numerical solution curves overlap, so considering the graph only, we can say that 10 control volumes are sufficient for solving this problem. \n",
     "\n",
     "To dig deeper into the accuracy of solutions for each case, we also calculated the difference between the numerical solution and analytical solution at each internal control volume. The one-term fourier analytical solution of the problem is given by :\n",
     "![image.png](attachment:image.png)\n",
@@ -3774,7 +3748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -3928,7 +3902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -4089,7 +4063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -4262,7 +4236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -4459,7 +4433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -4705,7 +4679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -4752,7 +4726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -4818,7 +4792,7 @@
     "\n",
     "In $Fig.2$ we have plotted the temperature profile at final time (3.2632 second) over half of the plane wall (from x=0 to x=L) for different number of timesteps. It is observed that, the temperature profile for 32 timesteps with $\\Delta $T = 0.087803 is the closest to the Analytical solution and the temperature profile for 2 timesteps with $\\Delta $T = 1.40485 is the farthest. This indicates that, more the number of timesteps we use i.e. smaller the timestep size, better will be the accuracy of the solution.\n",
     "\n",
-    "In $Fig.3$, we have plotted the absolute average error vs the time step size for first order transient scheme and fitted an exponential curve on the log-log plot to obtain the exponent $p$ in $e$ = $c(\\Delta T)^{p}$ as 1.85 which rounds to 2. Thus, our plot supports the conclusion that the second order transient scheme is 2nd order accurate ."
+    "In $Fig.3$, we have plotted the absolute average error vs the time step size for first order transient scheme and fitted an exponential curve on the log-log plot to obtain the exponent $p$ in $e$ = $c(\\Delta T)^{p}$ as 1.85 which rounds up to 2. Thus, our plot supports the conclusion that the second order transient scheme is 2nd order accurate ."
    ]
   },
   {
@@ -4830,7 +4804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
